style: float PWA install banner to avoid layout shift, remove install from cabinet

--- a/web/src/pages/Cabinet/Cabinet.module.css
+++ b/web/src/pages/Cabinet/Cabinet.module.css
@@ -38,10 +38,6 @@
     margin-top: 4px;
 }
 
-.pwaInstallSection {
-    margin-top: 4px;
-}
-
 .cardSection {
     display: flex;
     flex-direction: column;
